fix banner text color in dark mode

--- a/styles/dark.less
+++ b/styles/dark.less
@@ -108,7 +108,7 @@ html.dark-mode {
     background-color: @color-dark-banner-background;
 
     .text-muted {
-      color: shade(@color-dark-banner-background, 75%) !important;
+      color: tint(@color-dark-banner-background, 50%) !important;
     }
   }
 
